# rag_starter

./: .bumpversion.cfg  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml
docs/: conf.py  index.rst  installation.rst  usage.rst
rag/: __init__.py  cli.py  main.py  testing.py
rag/generation/: models.py  query_loop.py
rag/ingestion/: chunking.py  embeddings.py
rag/ingestion/storage/: astradb.py
rag/retrieval/: chains.py  prompts.py
rag/streamlit/: streamlit_app.py
tests/: __init__.py  test_rag.py
